--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -11,6 +11,7 @@
     app:cardUseCompatPadding="true">
 
     <TextView
+        android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -21,6 +22,7 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/tvCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
